--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.2",
+    "ethernal": "^0.14.1",
     "ganache-cli": "^6.12.2",
     "truffle": "^5.5.23"
   },
